# Parallel

C++ Threads/: CMakeLists.txt
C++ Threads/src/: heat2D3D.cc  sample.conf  test
CUDA/: CMakeLists.txt
CUDA/src/: heat2D3D.cu  sample.conf
DFT/: CMakeLists.txt  Readme.txt  Tower1024.txt  Tower128.txt  Tower256.txt  Tower512.txt  output_cuda.txt
DFT/cuda_codes/: cuda_final.cu
DFT/mpi_codes/: complex.cc  mpi_final.cc
DFT/thread_codes/: thread_final.cc
MPI/: CMakeLists.txt
MPI/src/: Heat_3.cpp
STL Vector Implementation/: CMakeLists.txt  array.cc  array.h  main.cc
